# Eterna

./: .gitignore  CMakeLists.txt  Eterna.sln  Eterna.vcxproj  Eterna.vcxproj.filters  LuaClassRegistrator.h  LuaFunction.cpp  LuaFunction.h  LuaRegisterClass.h  README.md  RegisterCallback.h  ResisterCallback.h  ScriptEngine.cpp  ScriptEngine.h  ScriptEngineInterface.h  stdafx.cpp
Examples/: CMakeLists.txt  Example.lua  Examples.cpp  Examples.vcxproj  Examples.vcxproj.filters  Examples2.cpp  LuaObjectTest.cpp  LuaObjectTest.h  add.lua  fun.lua
Src/: Config.h  Eterna.h  LuaFunction.h  LuaRegisterClass.h  RegisterCallback.h  ScriptEngine.cpp  ScriptEngine.h
Src/Lua/: CMakeLists.txt
